Create playbook file

--- a/.github/workflows/run-ansible.yaml
+++ b/.github/workflows/run-ansible.yaml
@@ -41,6 +41,25 @@ jobs:
         working-directory: ./devops/ansible/
         run: |
           ansible all -m ping
+      - name: Create Playbooks
+        run: |
+          mkdir -p ./devops/ansible/
+          cat <<EOF > ./devops/ansible/install-nginx.yaml
+          - name: Install NGINX
+            hosts: all
+            become: true
+            tasks:
+            - name: Install NGINX
+              apt:
+                name: nginx
+                state: present
+                update_cache: yes
+            - name: Ensure NGINX is running
+              service:
+                name: nginx
+                state: started
+                enabled: yes
+            EOF
       - name: Run Ansible Playbooks
         working-directory: ./devops/ansible/
         run: |
